objects/System_Login__c.object
<CustomObject>
    <description>Link to Systems module</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Client_ID__c</fullName>
        <formula>System__r.System_Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <referenceTo>System__c</referenceTo>
        <relationshipLabel>System Logins</relationshipLabel>
        <relationshipName>System_Logins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>System Login</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>System__c</columns>
        <columns>Username__c</columns>
        <columns>System_Client_ID__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SYSL{00000}</displayFormat>
        <label>System Login ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>